<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/viajes"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/Bienvenida"
        android:textColor="@android:color/white"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/et_lugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:layout_marginHorizontal="50dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:hint="@string/Introduccion_experiencia"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/et_descrip"
        android:layout_width="match_parent"
        android:background="@android:color/background_light"
        android:layout_height="298dp"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="50dp"
        android:gravity="clip_horizontal"
        android:hint="@string/Descripcion_experiencia"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button android:id="@+id/btn_guardar"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="cursive"
            android:textColor="@android:color/white"
            android:text="@string/Guardar"
            android:onClick="guardarVisita"/>

        <Button
            android:id="@+id/btn_ver"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@android:color/white"
            android:fontFamily="cursive"
            android:text="@string/Ver"
            android:layout_marginLeft="10dp"
            android:onClick="abrirLugaresVisitados"/>



    </LinearLayout>



</LinearLayout>